# DImGui

./: .gitignore  .gitmodules  Makefile  Makefile.android  README.md  android.txt  build.gradle  compile.bat  dub.json  dub.sdl
app/: build.gradle
app/jni/: CMakeLists.txt  LINUX.md  README.md  WINDOWS.md
app/src/main/assets/data/objects/: 3kql.cif  MasterSnoo2025.fbx  viking_room.mtl
app/src/main/assets/data/raws/: colors.txt  features.txt  materials.txt  reactions.txt  terrain.txt
app/src/main/assets/data/shaders/: cull.glsl  fragment.glsl  functions.glsl  particle.glsl  point.glsl  postfragment.glsl  postvertex.glsl  samplers.glsl  scene.glsl  shadow.glsl  structures.glsl  texture.glsl  vertex.glsl
app/src/main/java/org/libsdl/app/: SDLActivity.java
assets/shaders/: particle.glsl  shader.comp  shader.frag  shader.vert
assets/textures/solarsystem/: README.md
data/shaders/: imgui.frag  imgui.vert  wavefront.frag  wavefront.vert
docs/: compilation.md  cross-compilation.md
src/: application.d  buffer.d  camera.d  commands.d  depthbuffer.d  descriptorset.d  devices.d  engine.d  events.d  extensions.d  frame.d  framebuffer.d  images.d  imgui.d  includes.c  initsdl.d  instance.d  io.d  logicaldevice.d  main.d  phobos.d  physicaldevice.d  pipeline.d  pushconstant.d  renderpass.d  scene.d  sdl.d  sfx.d  structures.d  surface.d  swapchain.d  sync.d  texture.d  uniformbuffer.d  validation.d  vertex.d  vkdebug.d  vulkan.d  window.d
src/engine/: animation.d  bone.d  buffer.d  color.d  commands.d  compute.d  ctfe.d  ctfeparse.d  deletion.d  depthbuffer.d  descriptor.d  devices.d  events.d  extensions.d  featuretype.d  frame.d  framebuffer.d  glyphatlas.d  hits.d  icon.d  images.d  imgui.d  instance.d  instancing.d  inventory.d  io.d  jobs.d  lights.d  material.d  pipeline.d  raws.d  reflection.d  renderpass.d  resources.d  sampler.d  screenshot.d  sdl.d  serialization.d  sfx.d  shaders.d  (+15 more)
src/engine/assimp/: amat.d  animation.d  bone.d  bounds.d  material.d  mesh.d  meta.d  node.d
src/engine/events/: mouse.d  touch.d
src/engine/imgui/: directorywindow.d  dwarfwindow.d  fpswindow.d  inventorywindow.d  joystickwindow.d  lightswindow.d  mainmenu.d  objectswindow.d  settingswindow.d  sfxwindow.d  shaderswindow.d  sidepanel.d  texturewindow.d  widgets.d  worldwindow.d
src/engine/shadows/: shadowmap.d
src/engine/vulkan/: buffer.d  commands.d  depthbuffer.d  descriptor.d  devices.d  framebuffer.d  images.d  instance.d  pipeline.d  reflection.d  renderpass.d  sampler.d  shaders.d  ssbo.d  surface.d  swapchain.d  sync.d  uniforms.d  validation.d  views.d  vulkan.d
src/game/: block.d  chunk.d  clouds.d  dwarf.d  feature.d  game.d  gameobjects.d  ghost.d  input.d  inventory.d  jobs.d  mouse.d  pathfinding.d  pathmarker.d  physx.d  raws.d  reactions.d  resources.d  stockpile.d  tile.d  tool.d  vegetation.d  water.d  world.d
src/game/imgui/: buildwindow.d  dwarfwindow.d  fpswindow.d  inventorywindow.d  lightswindow.d  settingswindow.d  stockpilewindow.d  toolbar.d  waterwindow.d  worldwindow.d
src/icons/: IconsFontAwesome.h
src/math/: frustum.d  glyph.d  intersection.d  lsystem.d  matrix.d  noise.d  normals.d  particle.d  pathfinding.d  pdb.d  quaternion.d  rnjesus.d  search.d  searchnode.d  tileatlas.d  vector.d
src/objects/: assimp.d  block.d  blocks.d  boundingbox.d  bush.d  camera.d  chunk.d  cone.d  cube.d  cylinder.d  dwarf.d  feature.d  game.d  gameobjects.d  geometry.d  ghost.d  icosahedron.d  line.d  obj3ds.d  particlesystem.d  pathmarker.d  pdb.d  square.d  text.d  tilemap.d  torus.d  tree.d  turtle.d  vegetation.d  vertex.d  wavefront.d  world.d
